# example-rust-bindings

./: .gitignore  Cargo.toml  README.md  example_package.pyi  justfile  pyproject.toml
.cargo/: config.toml
.github/workflows/: auto.yaml  deploy.yaml  manual.yaml
src/: lib.rs
src/_core/: errors.rs
src/models/: mod.rs
src/models/bim/: mod.rs  psets.rs
src/models/json/: base.rs  model.rs
src/models/tree/: base.rs  model.rs
templates/: template.env
tests/: mod.rs
