cargo-features = ["profile-rustflags"]

[package]
name = "example_package"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
authors = [
    "noprd <noprd@users.noreply.github.com>",
]

# cf. https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "example_package"
crate-type = ["cdylib", "lib"]

[workspace]
members = [
    ".",
]

[profile.release]
rustflags = [
    "-A", "unused_imports",
    "-A", "dead_code",
    "-C", "link-arg=-undefined",
    "-C", "link-arg=dynamic_lookup",
]
debug = true
strip = false

[profile.dev]
rustflags = [
    "-A", "unused_imports",
    "-A", "dead_code",
    "-C", "link-arg=-undefined",
    "-C", "link-arg=dynamic_lookup",
]

[profile.test]
rustflags = [
    "-A", "unused_imports",
    "-A", "dead_code",
]

[dependencies]
pyo3 = {version = "^0.25.0", features = ["extension-module"]}
serde = {version = "^1.0.219", features = ["derive"]}
serde_json = {version = "^1.0.140"}
dict_derive = {version = "^0.6.0" }
dedent = {version = "^0.1.1"}

[dev-dependencies]
cargo-zigbuild = {version = "^0.20.0"}
rstest = {version = "^0.25.0"}
# NOTE: causes issues with dependency extrpim
# rustfmt = {version = "^0.10.0"}

# NOTE: currently unused
# [[bin]]
# name="programme"
# path="src/main.rs"
