[package]
name = "example_package"
version = "0.0.0"
edition = "2024"
rust-version = "1.87"
authors = [
    "noprd <noprd@users.noreply.github.com>",
]

# cf. https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "example_package"
crate-type = ["cdylib", "lib"]

[workspace]
members = [
    ".",
]

[profile.release]
debug = false
strip = false

[profile.dev]
debug = true
strip = false

[profile.test]
debug = true
strip = false

[dependencies]
cargo-zigbuild = {version = "^0.20.0"}
pyo3 = {version = "^0.25.0", features = ["extension-module", "abi3"]}
serde = {version = "^1.0.219", features = ["derive"]}
serde_json = {version = "^1.0.140"}
dict_derive = {version = "^0.6.0" }
dedent = {version = "^0.1.1"}

[dev-dependencies]
rstest = {version = "^0.25.0"}
# NOTE: causes issues with dependency extrpim
# rustfmt = {version = "^0.10.0"}

# NOTE: currently unused
# [[bin]]
# name="programme"
# path="src/main.rs"
