[project]
name = 'example_package'
version = "0.1.0"
description = 'Example of rust bindings for python'
authors = [
    {name="noprd", email="noprd@users.noreply.github.com"},
]
urls = {homepage = 'https://github.com/noprd/example-rust-bindings'}
maintainers = [
    {name="noprd", email="noprd@users.noreply.github.com"},
]
license = 'LICENCE'
readme = 'README.md'
keywords = [
    "python",
    "rust",
]
# cf. https://pypi.org/classifiers
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10,<3.15"

dependencies = [
    # --------------------------------
    # compiler
    # --------------------------------
    "pip>=25.1.1",
    # --------------------------------
    # models
    # --------------------------------
    "pydantic>=2.11.5",
    "pydantic-yaml>=1.5.1",
]

[dependency-groups]
dev = [
    "maturin>=1.8.6",
    "uv>=0.7.8",
    "ruff>=0.11.11",
]

[tool.maturin]
features = ["pyo3/extension-module"]
bindings = "pyo3"

[build-system]
requires = ["maturin>=1.8.3,<2.0"]
build-backend = "maturin"
